[package]
name = "gravity_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gravity_bench"
path = "src/main.rs"

[[bin]]
name = "gravity_node"
path = "src/gravity_node.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
actix = "0.13"

# Ethereum interaction
alloy = { version = "=1.0", features = ["full", "rlp", "hyper", "rpc", "rpc-types-json", "json-rpc"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI & Logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
comfy-table = "7.1"
indicatif = "0.17"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
tokio-util = "0.7"

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json", "http2"] }

# Random number generation
rand = "0.8"

# Async semaphore and synchronization
tokio-stream = "0.1"

# Additional dependencies for Stage 1
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tempfile = "3.8"
url = "2.4"
dotenvy = "0.15.7"
async-trait = "0.1.88"
rayon = "1.10.0"
tower = "0.5.2"
crossbeam = "0.8.4"
dashmap = "6.1.0"
parking_lot = "0.12.5"
dhat = {version = "0.3"}

# RPC server
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }

# Gravity SDK dependencies for OrderedBlock injection
alloy-consensus = "1.0"
greth = { path = "../gravity-reth" }
reth-pipe-exec-layer-ext-v2 = { path = "../gravity-reth/crates/pipe-exec-layer-ext-v2/execute" }
reth-primitives = { path = "../gravity-reth/crates/primitives" }
reth-rpc-api = { path = "../gravity-reth/crates/rpc/rpc-api" }
reth-rpc-eth-api = { path = "../gravity-reth/crates/rpc/rpc-eth-api" }
reth-ethereum = { path = "../gravity-reth/crates/ethereum/reth", features = ["node", "pool", "cli"] }
reth-tokio-util = { path = "../gravity-reth/crates/tokio-util" }
alloy-rpc-types-eth = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.1.0", default-features = false }
alloy-evm = { package = "alloy-evm", git = "https://github.com/Galxe/alloy-evm", branch = "v0.21.3-gravity", default-features = false }
alloy-serde = "1.0"
alloy-sol-macro = "1.3.1"
alloy-sol-types = { version = "1.3.1", default-features = false }

[profile.memprof]
inherits = "release"


[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
